DevTools: fix editing of inline styles

This patch starts resetting cached line endings for the inline styles
that were edited through style attribute modification.

BUG=637049
R=dgozman

Change-Id: I80fd8becc6ef697d13196ac6bfc178d9f9b4a014